tests/invalid/strict_typing/missing_argument.php
<?php

function takesTwo(int $a, int $b): void
{
}

takesTwo(1);

